# jsut-phoneme-llm-finetuning

./: .gitignore  README.md  baseline_cer__30.07659912109375.yaml  eval.json  pyproject.toml  test.json  train.json
src/: make_phoneme_text_dataset.py  model_finetuning.py
src/jsut_phoneme_data/: __init__.py
